--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>suresh</h1>
+    <h1>new name</h1>
     <img width="200px" src="profile.jpeg" alt="">
     <p>my profile text</p>
     
